upgrade JVM